--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">vision</string>
 
     <string-array name="resolution">
+        <item>352x288</item>
         <item>960x720</item>
         <item>1280x720</item>
         <item>800x480</item>
@@ -13,7 +14,11 @@
         <item>576x432</item>
         <item>480x320</item>
 
-        <item>352x288</item>
         <item>320x240</item>
+    </string-array>
+
+    <string-array name="protocol">
+        <item>rtmp</item>
+        <item>file</item>
     </string-array>
 </resources>
